manifests/workloads/CI/jenkins/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jenkins
  name: jenkins
