manifests/workloads/CI/jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.robotwizard.co.uk
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: jenkins
spec:
  type: ExternalName
  externalName: traefik.robotwizard.co.uk
  sessionAffinity: None
